# kokoro-min

./: README.md  pyproject.toml
kokoro_min/: __init__.py  custom_stft.py  istftnet.py  model.py  modules.py  pipeline.py
