[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kokoro-min"
version = "0.1.1"
description = "Minimal phoneme-only inference core for Kokoro TTS"
authors = [{ name = "YourName" }]
dependencies = ["torch"]

[tool.setuptools.packages.find]
where = ["."]
